manifests/ingress/overlays/prod/ingressroute-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app
  namespace: app
spec:
  routes:
    - match: Host(`argo.iivdele.ru`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend
          port: 80
    - match: Host(`argo.iivdele.ru`)
      kind: Rule
      services:
        - name: frontend
          port: 80
  tls:
    certResolver: letsencrypt
    domains:
      - main: argo.iivdele.ru
